@@ -1,3 +1,8 @@
+2009-01-22  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* library/zipvfs.tcl: Applied patch from [Bug 1011492] to ensure
+	we handle zipfiles with a prefix block robustly.
+
 2009-01-21  Andreas Kupries  <andreask@activestate.com>
 
 	* pkgIndex.tcl.in: Incremented version of vfs::zip
